# mykolaiv_city_bot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  example.env  main.py  pyproject.toml  run.py
backend/app/: base_router.py  base_service.py  mixins.py
backend/app/admin/: models.py  router.py  service.py
backend/app/users/: models.py  router.py  service.py
backend/config/: settings.py
bot/: Dockerfile  example.env  pyproject.toml  run.py
bot/app/: dp_register_handlers.py
bot/app/admin/: markups.py  message_handler.py  states.py  utils.py
bot/app/admin/features/: cancel.py  create_poll.py  create_post.py  login.py  retrieve_applications.py
bot/app/common/: common_messages.py  markups.py  register_common_handlers.py
bot/app/user/: markups.py  message_handler.py  states.py
bot/app/user/features/: answer_poll.py  application.py  change_address.py  faq.py  registration.py  share.py
bot/config/: settings.py
